[project]
name = "askhimanshu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "langchain-google-genai>=2.1.12",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.78",
    "langchain-groq>=0.3.8",
    "langchain-tavily>=0.2.11",
    "langchain-tools>=0.1.34",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langsmith>=0.4.32",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
    "aiosqlite>=0.21.0",
]
